--- a/calendar.htm
+++ b/calendar.htm
@@ -1,18 +1,19 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Calendar HTML</title>
-<link href="calendar_styles.css" rel="stylesheet" type="text/css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Calendar HTML</title>
+    <link href='main.css' rel='stylesheet' />
+    <link href="calendar_styles.css" rel="stylesheet" type="text/css">
+    <script src='main.js'></script>
+    <script src='calendar.js'></script>
+  </head>
 
 <body>
-<div class="content-body">
-    <div class="calendar-container">
-		<p>Hello</p>
+    <div class="content-body">
+      <div class="calendar-container calendar" id="calendar">
 		<!-- your code here -->
-		
+      </div>
     </div>
-</div>
-</body>
+  </body>
 </html>
