added modal, legend, event style

--- a/calendar.htm
+++ b/calendar.htm
@@ -12,8 +12,40 @@
 <body>
     <div class="content-body">
       <div class="calendar-container calendar" id="calendar">
-		<!-- your code here -->
       </div>
+      <div>
+        <!-- The Modal -->
+          <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span class="close">&otimes;</span>
+              <p class="modal-header">NOTE: September 3, 2020</p>
+              <div class="modal-note-area">
+                <textarea class="modal-text-area" placeholder="Start typing your note here..." rows="10"></textarea>
+                <button type="button" class="modal-button">SAVE NOTE</button>
+              </div>
+            </div>
+
+          </div>
+
+          <!-- Legend HTML-->
+          <div class="legend">
+            <div class="legend-dot legend-color-1"></div>
+            <p class="legend-item">Legend Item</p>
+            <div class="legend-dot legend-color-2"></div>
+            <p class="legend-item">Legend Item</p>
+            <div class="legend-dot legend-color-3"></div>
+            <p class="legend-item">Legend Item</p>
+            <div class="legend-dot legend-color-4"></div>
+            <p class="legend-item">Legend Item</p>
+          </div>
+
+          <div class="event-block">
+            <div class="legend-dot-smaller"></div>
+            <p class="event-text">Tavern Room <span>@ 10p</span></p>
+          </div>
     </div>
-  </body>
+  </div>
+</body>
 </html>
