legend html and js built

--- a/calendar.htm
+++ b/calendar.htm
@@ -30,7 +30,7 @@
           </div>
 
           <!-- Legend HTML-->
-          <div class="legend">
+          <div class="legend" id="legend">
             <div class="legend-dot legend-color-1"></div>
             <p class="legend-item">Legend Item</p>
             <div class="legend-dot legend-color-2"></div>
@@ -44,6 +44,11 @@
           <div class="event-block">
             <div class="legend-dot-smaller"></div>
             <p class="event-text">Tavern Room <span>@ 10p</span></p>
+          </div>
+
+          <!-- Legend Button -->
+          <div class = "fc-legend-button" id="legendButton">
+            <button type="button" class="legend-icon-text" onclick="displayLegend()"><span>LEGEND ^</span></button>
           </div>
     </div>
   </div>
